Fixing typo in summary
"latest a greatest" should be "latest and greatest"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="summary-title">Complex web apps made easy</h2>
         <p class="summary-desc">
           React.js Starter Kit helps you build fast, robust, and modular web apps. Kick-start your project with the
-          latest a greatest development tools and technological stack, the same front-end stack used at Facebook.
+          latest and greatest development tools and technological stack, the same front-end stack used at Facebook.
         </p>
         <a href="https://github.com/kriasoft/react-starter-kit/archive/master.zip" class="download-btn"><strong>Download</strong> v0.4.1</a><br>
         <span class="download-desc">See the <a href="https://github.com/kriasoft/react-starter-kit/blob/master/CHANGELOG.md">changelog</a></span>
