--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <div class="navigation clearfix">
           <h1 class="nav-title pull-left">React Starter Kit</h1>
           <div class="pull-right">
-            <a class="nav-btn" href="https://github.com/kriasoft/react-starter-kit">Source Code</a>
-            <a class="nav-btn" href="https://gitter.im/kriasoft/react-starter-kit">Online Chat</a>
+            <a class="nav-btn" href="https://github.com/kriasoft/react-starter-kit" title="Source code at GitHub">Source Code<i class="icon-link"></i></a>
+            <a class="nav-btn" href="https://gitter.im/kriasoft/react-starter-kit" title="Online chat at Gitter">Chat<i class="icon-link"></i></a>
+            <a class="nav-btn nav-btn--highlight" href="https://rollbar.recruiterbox.com/jobs/fk0h8ho/" title="Front-end Engineer at Rollbar">Jobs<i class="icon-link"></i></a>
           </div>
         </div>
         <h2 class="summary-title">Complex web apps made easy</h2>
@@ -43,8 +44,8 @@
         <a class="patron-link patron-ma" href="https://rollbar.com/?utm_source=reactstartkit(github)&amp;utm_medium=link&amp;utm_campaign=reactstartkit(github)" title="Full-stack error tracking for all apps in any language">
           <img class="patron-logo" src="img/rollbar.png" alt="Makers Academy" width="249" height="56" />
         </a>
-        <a class="patron-link patron-ma" href="http://www.makersacademy.com/?utm_source=ReactStarterKit&amp;utm_medium=link&amp;utm_campaign=ReactStarterKitGithub" title="Learn to code in 12 Weeks and start your career as a Junior Developer in London">
-          <img class="patron-logo" src="img/makers-academy.png" alt="Makers Academy" width="296" height="56" />
+        <a class="patron-link patron-ma" href="https://localizejs.com/?cid=802&utm_source=rsk" title="Translate your web app in minutes">
+          <img class="patron-logo" src="img/localize.png" alt="Localize" width="269" height="56" />
         </a>
       </div>
     </div>
