updated rollbar logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="patrons">
       <div class="container clearfix">
         <a class="patron-link patron-ma" href="https://rollbar.com/?utm_source=reactstartkit(github)&amp;utm_medium=link&amp;utm_campaign=reactstartkit(github)" title="Full-stack error tracking for all apps in any language">
-          <img class="patron-logo" src="img/rollbar.png" alt="Makers Academy" width="249" height="56" />
+          <img class="patron-logo" src="img/rollbar-logo-color-horiz.png" alt="Makers Academy"  height="52" />
         </a>
         <a class="patron-link patron-ma" href="https://localizejs.com/?cid=802&utm_source=rsk" title="Translate your web app in minutes">
           <img class="patron-logo" src="img/localize.png" alt="Localize" width="269" height="56" />
